--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ body {
   transition: 1s;
 }
 
+/* @media screen and (max-width: 450px) {
+  .card {
+    width: 540px;
+    height: 400px;
+  }
+} */
+
 .card:hover {
   transform: rotate(-5deg);
 }
@@ -108,6 +115,7 @@ body {
   width: 100%;
   position: absolute;
   bottom: 0;
+  user-select: none;
 }
 
 .top-layer,
@@ -197,20 +205,24 @@ body {
 
 .name {
   font-family: "Pacifico", cursive;
+  user-select: none;
 }
 
 .wish {
   /* font-family: "Roboto", sans-serif; */
   font-family: "Sora", sans-serif;
   font-size: 15px;
+  user-select: none;
 }
 
 .conclusion {
   font-family: "Courgette", cursive;
+  user-select: none;
 }
 
 .title {
   text-align: center;
   margin: 20px auto 0;
   font-family: "Sora", sans-serif;
+  user-select: none;
 }
